<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">WWWJDIC for Android</string>
	<string name="translationError">Error</string>
	<string-array name="dictinaries_array">
		<item>General</item>
		<item>Japanese Names</item>
		<item>Computing/Telecomm</item>
		<item>Life Sciences/Bio-Med</item>
		<item>Legal Terms</item>
		<item>Finance/Marketing</item>
		<item>Buddhism</item>
		<item>Miscellaneous</item>
		<item>Engineering/Science</item>
		<item>Linguistics</item>
		<item>River &amp; Water Systems</item>
		<item>Automobile Industry</item>
		<item>Japanese-German</item>
		<item>Japanese-French</item>
		<item>Japanese-Russian</item>
		<item>Japanese-Swedish</item>
		<item>Japanese-Hungarian</item>
		<item>Japanese-Spanish</item>
		<item>Japanese-Dutch</item>
		<item>Japanese-Slovenian</item>
	</string-array>
	<string-array name="kanji_search_types_array">
		<item>Kanji or reading</item>
		<item>Stroke count</item>
		<item>Radical number</item>
		<item>English meaning</item>
		<item>Unicode code (hex)</item>
		<item>JIS code (hex)</item>
		<item>SKIP code</item>
		<item>Pinyin reading</item>
		<item>Korean reading</item>
	</string-array>
	<string name="about_text">WWWJDIC for Android, ver 0.1, 2010</string>
	<string name="about_by">by Nikolay Elenkov</string>
	<string name="about_bugtracking">Report issues at</string>
	<string name="bugtracker_url">http://code.google.com/p/wwwjdic/issues/</string>
	<string name="uses_wwwjdic">Uses Jim Breen\'s WWWJDIC</string>
	<string name="wwwjdic_link">http://www.csse.monash.edu.au/~jwb/cgi-bin/wwwjdic.cgi?1C
	</string>
	<string name="select_dictionary">Select dictionary:</string>
	<string name="stroke_count">Stroke count:  </string>
	<string name="radical_number">Radical number: </string>
	<string name="english_meanings">English meanings</string>
	<string name="radical_strokes">Radical/strokes</string>
	<string name="codes_more">Codes and more</string>
	<string name="translation">Translation(s)</string>
	<string name="select_search_type">Select search type:</string>
	<string name="search">Search</string>
	<string name="error">Error</string>
	<string name="ok">OK</string>
	<string name="loading">Loading. Please wait...</string>
	<string name="jis_code">JIS code: </string>
	<string name="unicode_number">Unicode number: </string>
	<string name="classical_radical">Classical radical number: </string>
	<string name="freq_rank">Frequency rank: </string>
	<string name="grade">Grade: </string>
	<string name="jlpt_level">JLPT level: </string>
	<string name="skip_code">SKIP code: </string>
	<string name="korean_reading">Korean reading: </string>
	<string name="pinyn">Pinyin: </string>
	<string name="more">More...</string>
	<string name="dictionary">Dictionary</string>
	<string name="kanji_lookup">Kanji Lookup</string>
	<string name="about">About</string>
</resources>
